   requirement to use two different keywords.  For example, to specify all
   codecs except g729 and g723, one need only specify allow=all,!g729,!g723.

Queue changes
-------------
 * Added queue options autopausebusy and autopauseunavail for automatically
   pausing a queue member when their device reports busy or congestion.

CDR postgresql driver changes
-----------------------------
 * Added command "cdr show pgsql status" to check connection status

AMI (Asterisk Manager Interface) changes
----------------------------------------
 * Originate now generates an error response if the extension given
   is not found in the dialplan

FAX changes
-----------
 * FAXOPT(faxdetect) will enable a generic fax detect framehook for dialplan
   control of faxdetect.

DUNDi changes
-------------
 * Allow the built in variables ${NUMBER}, ${IPADDR} and ${SECRET} to be
   used within the dynamic weight attribute when specifying a mapping.

Core changes
------------
 * Each logging destination and console now have an independent notion of the
   current verbosity level.  Logger.conf now allows an optional argument to
   the 'verbose' specifier, indicating the level of verbosity sent to that
   particular logging destination.  Additionally, remote consoles now each
   have their own verbosity level.  While 'core set verbose' still works to
   affect the core console verbosity, 'remote set verbose' will now set a
   separate level for each remote console without affecting any other console.

Dialplan functions
------------------
 * Addition of the VM_INFO function that can be used to retrieve voicemail
   user information, such as the email address and full name.
   The MAILBOX_EXISTS dialplan function has been deprecated in favour of
   VM_INFO.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.8 to Asterisk 10 -------------------
------------------------------------------------------------------------------